--- a/shoppingIOS/shoppingIOS/Base.lproj/Main.storyboard
+++ b/shoppingIOS/shoppingIOS/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xeO-cg-qo2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xeO-cg-qo2">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -124,10 +124,27 @@
                                     <action selector="onCrashButtonTap:" destination="xuj-Bt-La6" eventType="touchUpInside" id="0q8-Zn-tdN"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NKu-Ww-BUe">
+                                <rect key="frame" x="28" y="313" width="319" height="40"/>
+                                <color key="backgroundColor" red="0.31372549020000001" green="0.82352941180000006" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="eiu-YC-9Ob"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="点击循环使用">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onCycleButtonTouch:" destination="xuj-Bt-La6" eventType="touchUpInside" id="29W-ym-nQq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="79o-mm-qtP" firstAttribute="trailing" secondItem="pGC-z2-3gH" secondAttribute="trailing" constant="28" id="26a-Uh-utC"/>
+                            <constraint firstItem="NKu-Ww-BUe" firstAttribute="leading" secondItem="79o-mm-qtP" secondAttribute="leading" constant="28" id="JjQ-VM-iXd"/>
+                            <constraint firstItem="79o-mm-qtP" firstAttribute="trailing" secondItem="NKu-Ww-BUe" secondAttribute="trailing" constant="28" id="dQg-sH-GN2"/>
+                            <constraint firstItem="NKu-Ww-BUe" firstAttribute="top" secondItem="pGC-z2-3gH" secondAttribute="bottom" constant="18" id="hUG-Jm-pLa"/>
                             <constraint firstItem="pGC-z2-3gH" firstAttribute="top" secondItem="eBo-kB-PJV" secondAttribute="bottom" constant="70" id="hod-If-vod"/>
                             <constraint firstItem="pGC-z2-3gH" firstAttribute="leading" secondItem="79o-mm-qtP" secondAttribute="leading" constant="28" id="j0O-bs-oSs"/>
                             <constraint firstItem="eBo-kB-PJV" firstAttribute="top" secondItem="79o-mm-qtP" secondAttribute="top" constant="80" id="mCO-nW-j1g"/>
